src/hts/private/hts_concat.h

#    define libname "libhts.dll"
#    define libname "libhts.dylib"
#    define libname "libhts.so"
/*! @abstract the mate is mapped to the reverse strand */
#define BAM_FMREVERSE     32
void free(void *);
struct hFILE;
//############################
//# kstring
//############################

typedef struct __kstring_t {
  size_t l, m;
  char *s;
} kstring_t;
//##########################
//# BGZF
//##########################
typedef struct __bgzidx_t {} bgzidx_t;
struct bgzf_mtaux_t;
typedef struct z_stream_s {} z_stream;
typedef struct BGZF {
    // Reserved bits should be written as 0; read as "don't care"
    unsigned errcode:16, reserved:1, is_write:1, no_eof_block:1, is_be:1;
    signed compress_level:9;
    unsigned last_block_eof:1, is_compressed:1, is_gzip:1;
    int cache_size;
    int block_length, block_clength, block_offset;
    int64_t block_address, uncompressed_address;
    void *uncompressed_block, *compressed_block;
    void *cache; // a pointer to a hash table
    struct hFILE *fp; // actual file handle
    struct bgzf_mtaux_t *mt; // only used for multi-threading
    bgzidx_t *idx;      // BGZF index
    int idx_build_otf;  // build index on the fly, set by bgzf_index_build_init()
    z_stream *gz_stream;// for gzip-compressed files
} BGZF;
enum htsFormatCategory {
    unknown_category,
    sequence_data,    // Sequence data -- SAM, BAM, CRAM, etc
    variant_data,     // Variant calling data -- VCF, BCF, etc
    index_file,       // Index file associated with some data file
    region_list,      // Coordinate intervals or regions -- BED, etc
    category_maximum = 32767
};
enum htsExactFormat {
    unknown_format,
    binary_format, text_format,
    sam, bam, bai, cram, crai, vcf, bcf, csi, gzi, tbi, bed,
    json,
    format_maximum = 32767
};
enum htsCompression {
    no_compression, gzip, bgzf, custom,
    compression_maximum = 32767
};
typedef struct htsFormat {
    enum htsFormatCategory category;
    enum htsExactFormat format;
    struct { short major, minor; } version;
    enum htsCompression compression;
    short compression_level;  // currently unused
    void *specific;  // format specific options; see struct hts_opt.
} htsFormat;
//###########################
//# hts
//###########################
typedef struct cram_fd {} cram_fd;
typedef struct __hts_idx_t {} hts_idx_t;
typedef struct {
    uint32_t is_bin:1, is_write:1, is_be:1, is_cram:1, is_bgzf:1, dummy:27;
    int64_t lineno;
    kstring_t line;
    char *fn, *fn_aux;
    union {
        BGZF *bgzf;
        struct cram_fd *cram;
        struct hFILE *hfile;
    } fp;
    htsFormat format;
} htsFile;
typedef int hts_readrec_func(BGZF *fp, void *data, void *r, int *tid, int *beg, int *end);
typedef struct _h {} hts_itr_t;
hts_itr_t *hts_itr_query(const hts_idx_t *idx, int tid, int beg, int stop, hts_readrec_func readrec);
int hts_itr_next(BGZF *fp, hts_itr_t *iter, void *r, void *data);
typedef hts_itr_t *hts_itr_query_func(const hts_idx_t *idx, int tid, int beg, int end, hts_readrec_func *readrec);
typedef int (*hts_name2id_f)(void*, const char*);
hts_itr_t *hts_itr_querys(const hts_idx_t *idx, const char *reg, hts_name2id_f getid, void *hdr, hts_itr_query_func *itr_query, hts_readrec_func *readrec);
//###########################
//# tbx
//###########################
typedef struct {
        int32_t preset;
        int32_t sc, bc, ec; // seq col., beg col. and end col.
        int32_t meta_char, line_skip;
} tbx_conf_t;
typedef struct {
        tbx_conf_t conf;
        hts_idx_t *idx;
        void *dict;
} tbx_t;
int tbx_name2id(tbx_t *tbx, const char *ss);
int tbx_index_build(const char *fn, int min_shift, const tbx_conf_t *conf);
tbx_t *tbx_index_load(const char *fn);
tbx_t *tbx_index_load2(const char *fn, const char *fnidx);
 #define tbx_itr_querys(tbx, s) hts_itr_querys((tbx)->idx, (s), (hts_name2id_f)(tbx_name2id), (tbx), hts_itr_query, tbx_readrec)
const char **tbx_seqnames(tbx_t *tbx, int *n);  // free the array but not the values
void tbx_destroy(tbx_t *tbx);
int tbx_readrec(BGZF *fp, void *tbxv, void *sv, int *tid, int *beg, int *end);
#define tbx_itr_queryx(idx, tid, beg, end) hts_itr_query(idx, (tid), (beg), (stop), tbx_readrec)
#define tbx_itr_queryi(tbx, tid, beg, end) hts_itr_query((tbx)->idx, (tid), (beg), (stop), tbx_readrec)
//#####################################
//# sam.h
//#####################################

typedef htsFile samFile;
typedef struct {
        int32_t n_targets, ignore_sam_err;
        uint32_t l_text;
        uint32_t *target_len;
        int8_t *cigar_tab;
        char **target_name;
        char *text;
        void *sdict;
} bam_hdr_t;
typedef struct {
    int32_t tid;
    int32_t pos;
    uint16_t bin;
    uint8_t qual;
    uint8_t l_qname;
    uint16_t flag;
    uint8_t unused1;
    uint8_t l_extranul;
    uint32_t n_cigar;
    int32_t l_qseq;
    int32_t mtid;
    int32_t mpos;
    int32_t isize;
} bam1_core_t;
typedef struct {
        bam1_core_t core;
        int l_data, m_data;
        uint8_t *data;
        uint64_t id;
} bam1_t;
bam_hdr_t *sam_hdr_parse(int l_text, const char *text);
bam_hdr_t *sam_hdr_read(samFile *fp);
bam_hdr_t* bam_hdr_dup(const bam_hdr_t *h0);
int bam_hdr_write(BGZF *fp, const bam_hdr_t *h);
int sam_hdr_write(htsFile *fp, const bam_hdr_t *h);
int sam_write1(htsFile *fp, const bam_hdr_t *h, const bam1_t *b);
void bam_hdr_destroy(bam_hdr_t *h);
int sam_format1(const bam_hdr_t *h, const bam1_t *b, kstring_t *str);
int sam_read1(samFile *fp, bam_hdr_t *h, bam1_t *b);
int bam_read1(BGZF *fp, bam1_t *b);
bam1_t *bam_init1();
void bam_destroy1(bam1_t *b);
#define bam_is_mrev(b) (((b)->core.flag&BAM_FMREVERSE) != 0)
#define bam_get_qname(b) ((char*)(b)->data)
uint8_t *bam_get_aux(bam1_t *b);
int bam_get_l_aux(bam1_t *b);
uint8_t *bam_aux_get(const bam1_t *b, const char tag[2]);
int32_t bam_aux2i(const uint8_t *s);
float bam_aux2f(const uint8_t *s);
char *bam_aux2Z(const uint8_t *s);
char bam_aux2A(const uint8_t *s);
bam1_t *bam_copy1(bam1_t *bdst, const bam1_t *bsrc);
bam1_t *bam_dup1(const bam1_t *bsrc);
int bam_cigar2qlen(int n_cigar, const uint32_t *cigar);
int bam_cigar2rlen(int n_cigar, const uint32_t *cigar);
int32_t bam_endpos(const bam1_t *b);
int   bam_str2flag(const char *str);    /** returns negative value on error */
char *bam_flag2str(int flag);   /** The string must be freed by the user */
int sam_parse1(kstring_t *s, bam_hdr_t *h, bam1_t *b);
hts_idx_t * sam_index_load(samFile *in, char *); // load index
int bam_index_build(const char *fn, int min_shift);
hts_itr_t * sam_itr_querys(hts_idx_t*, bam_hdr_t *h, char * region);
hts_itr_t *sam_itr_queryi(const hts_idx_t *idx, int tid, int beg, int end);
int hts_detect_format(struct hFILE *fp, htsFormat *fmt);
char *hts_format_description(const htsFormat *format);
#define sam_itr_next(htsfp, itr, r) hts_itr_next((htsfp)->fp.bgzf, (itr), (r), (htsfp))
#define BAM_CMATCH      0
#define BAM_CINS        1
#define BAM_CDEL        2
#define BAM_CREF_SKIP   3
#define BAM_CSOFT_CLIP  4
#define BAM_CHARD_CLIP  5
#define BAM_CPAD        6
#define BAM_CEQUAL      7
#define BAM_CDIFF       8
#define BAM_CBACK       9
#define BAM_CIGAR_STR   "MIDNSHP=XB"
#define BAM_CIGAR_SHIFT 4
#define BAM_CIGAR_MASK  0xf
#define BAM_CIGAR_TYPE  0x3C1A7
#define bam_cigar_op(c) ((c)&BAM_CIGAR_MASK)
#define bam_cigar_oplen(c) ((c)>>BAM_CIGAR_SHIFT)
// Note that BAM_CIGAR_STR is padded to length 16 bytes below so that
// the array look-up will not fall off the end.  '?' is chosen as the
// padding character so it's easy to spot if one is emitted, and will
// result in a parsing failure (in sam_parse1(), at least) if read.
#define bam_cigar_opchr(c) ("MIDNSHP=XB??????"[bam_cigar_op(c)])
#define bam_cigar_gen(l, o) ((l)<<BAM_CIGAR_SHIFT|(o))
typedef union {
    void *p;
    int64_t i;
    double f;
} bam_pileup_cd;
typedef struct {
    bam1_t *b;
    int32_t qpos;
    int indel, level;
    uint32_t is_del:1, is_head:1, is_tail:1, is_refskip:1, aux:28;
    bam_pileup_cd cd; // generic per-struct data, owned by caller.
} bam_pileup1_t;
typedef int (*bam_plp_auto_f)(void *data, bam1_t *b);
typedef struct {} bam_plp_t;
typedef struct {} bam_mplp_t;
bam_plp_t bam_plp_init(bam_plp_auto_f func, void *data);
void bam_plp_destroy(bam_plp_t iter);
int bam_plp_push(bam_plp_t iter, const bam1_t *b);
const bam_pileup1_t *bam_plp_next(bam_plp_t iter, int *tid, int *pos, int *n_plp);
const bam_pileup1_t *bam_plp_auto(bam_plp_t iter, int *tid, int *pos, int *n_plp);
void bam_plp_set_maxcnt(bam_plp_t iter, int maxcnt);
void bam_plp_reset(bam_plp_t iter);
bam_mplp_t bam_mplp_init(int n, bam_plp_auto_f func, void **data);
void bam_mplp_init_overlaps(bam_mplp_t iter);
void bam_mplp_destroy(bam_mplp_t iter);
void bam_mplp_set_maxcnt(bam_mplp_t iter, int maxcnt);
int bam_mplp_auto(bam_mplp_t iter, int *tid, int *pos, int *n_plp, const bam_pileup1_t **plp);
//##############################################
//# kfunc
//##############################################

double kf_betai(double a, double b, double x);
double kt_fisher_exact(int n11, int n12, int n21, int n22, double *left, double *right, double *two);
//##############################################
//# faidx
//##############################################

typedef struct __faidx_t {} faidx_t;
void fai_destroy(faidx_t *fai);
int fai_build(const char *fn);
faidx_t *fai_load(const char *fn);
//  @param  len  Length of the region; -2 if seq not present, -1 general error
char *fai_fetch(const faidx_t *fai, const char *reg, int *len);
int faidx_nseq(const faidx_t *fai);
char *faidx_fetch_seq(const faidx_t *fai, const char *c_name, int p_beg_i, int p_end_i, int *len);
int faidx_has_seq(const faidx_t *fai, const char *seq);
/// Return sequence length, -1 if not present
int faidx_seq_len(const faidx_t *fai, const char *seq);